fix(doc): fix the dark mode

--- a/assets/css/doc.css
+++ b/assets/css/doc.css
@@ -4,8 +4,18 @@ body {
 #author {
     font-weight: 700;
     color: #949494;
-    text-decoration: none;
     cursor: pointer;
+}
+/* dark-mode */
+#author.dark-mode {
+    color: hsl(177, 100%, 55%);
+    font-size: 16px;
+    &:hover {
+        border: 1px solid #17c9e9;
+        background-color:#17c9e9;
+        color: #000;
+        border-radius: 4px;
+    }
 }
 
 /* Section Styling */
@@ -21,19 +31,7 @@ body {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-/* Heading Styling */
 
-h1,
-h2,
-h3 {
-    color: #006d77;
-}
-
-/* Paragraph Styling */
-
-p {
-    color: #555;
-}
 
 ol, ul, li {
     line-height: 1.5;
@@ -49,6 +47,20 @@ code {
     font-size: 90%;
 }
 
+/* dark-mode */
+
+code.dark-mode {
+    background-color: #17cae946;
+    border: 1px solid #17c9e9
+}
+#code-block.dark-mode {
+    background-color: rgb(3, 10, 32);
+    color: aqua;
+}
+pre.dark-mode {
+    background-color: rgb(3, 10, 32);
+}
+
 
 /* Section Title Styling */
 .section-title {
@@ -62,6 +74,9 @@ code {
     font-weight: bold;
     color: #006d77;
 }
+.tool-title.dark-mode {
+    color: #17c9e9;
+}
 
 .line-span {
     border-top: 2px solid #006d77;
@@ -71,6 +86,10 @@ code {
     margin: 0 10px;
 }
 
+.line-span .dark-mode {
+    border-top: 2px solid #00eaff;
+
+}
 /* Section Styling */
 .doc-section {
     margin: 40px 20px;
@@ -78,6 +97,18 @@ code {
     background-color: #ffffff;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+
+/* dark-mode for doc sections */
+.doc-section.dark-mode,
+#code-editor.dark-mode,
+#live-preview.dark-mode,
+#code-snippets.dark-mode,
+#contributions.dark-mode
+{
+  background-color: var(--bg-dark-section);
+
 }
 
 /* Copyable Code Styling */
